# PaymentPlatform

./: .env_example  .flake8  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt
apps/accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/accounts/templates/accounts/: login.html  profile.html  register.html
apps/content/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_alter_category_options_alter_comment_options_and_more.py  0003_fix_slug_field.py  0004_post_payment_type_alter_post_price.py  0005_simplify_post_model.py
apps/content/templates/content/: post_create.html  post_detail.html  post_list.html  post_status_list.html  post_update.html
apps/payments/: models.py  stripe_utils.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_alter_payment_options_alter_payment_amount_and_more.py
apps/payments/templates/payments/: checkout.html  history.html  success.html
payment_platform/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html
templates/includes/: footer.html  header.html
tests/: test_accounts.py  test_content.py  test_forms.py  test_models.py  test_payments.py  test_views.py
